Resolved deprecation